--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "electron": "^1.7.8",
-    "immutable-assign": "^2.0.1",
     "libmpvjs": "github:zenwarr/libmpvjs",
     "mobx": "^3.3.1",
     "react": "^16.0.0",
@@ -25,6 +24,7 @@
     "html-webpack-plugin": "^2.30.1",
     "mobx-react": "^4.3.3",
     "mobx-react-devtools": "^4.2.15",
+    "react-hot-loader": "^3.1.1",
     "source-map-loader": "^0.2.2",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.3",
@@ -32,8 +32,9 @@
     "webpack-html-plugin": "^0.1.1"
   },
   "scripts": {
-    "build": "webpack --config ./webpack/webpack.config.js",
+    "build": "webpack --config ./webpack/webpack-main.config.js && webpack --config ./webpack/webpack-renderer.config.js",
     "start": "electron ./dist/server/bundle.js",
+    "dev-server": "webpack-dev-server --config ./webpack/webpack-renderer.config.js",
     "build-and-start": "npm run build && npm run start"
   }
 }
