--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.3",
     "webpack": "^3.6.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^2.11.3",
     "webpack-html-plugin": "^0.1.1"
   },
   "scripts": {
